# localed

./: AUTHORS  BUGS-NEWS  NEWS  README.md  localed.SlackBuild  meson.build  meson_options.txt
data/: meson.build  org.freedesktop.locale1.conf  org.freedesktop.locale1.policy  org.freedesktop.locale1.rules.in  org.freedesktop.locale1.service.in  org.freedesktop.locale1.xml
man/: localectl.1  localed.8  meson.build
po/: LINGUAS  POTFILES
slack/: localectl  slack-desc
src/: main.c  meson.build  rcl-locale.c  rcl-locale.h
